# SyncMCP

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  MCP_INTEGRATION.md  Makefile  PROGRESS.md  PUBLISHING.md  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API.md  DEVELOPER-GUIDE.md  EXAMPLES.md  MOVE-MCP-TO-GLOBAL.md  QUICK-MOVE-MCP.md  USER-GUIDE.md  UVX-EVALUATION.md
rfp/: PROJECT-COMPLETION-SUMMARY.md  design-universal-type-conversion.md  design.md  requirements.md  tasks.md
sync-tools/: convert-to-relative-path.py  fix-google-mcp.py  sync-mcp-configs-smart.py  sync-mcp-configs.py  sync-to-gemini.py  update-all-paths.py  update-image-gen-path.py
syncmcp/: __init__.py  __main__.py  cli.py
syncmcp/core/: backup_manager.py  config_manager.py  diff_engine.py  sync_engine.py
syncmcp/mcp/: __init__.py  server.py
syncmcp/tui/: __init__.py  interactive.py
syncmcp/utils/: __init__.py  errors.py  history.py  logger.py
tests/: conftest.py  test_automatic_type_conversion.py  test_backup_and_sync.py  test_cli.py  test_config_manager.py  test_diff_engine.py  test_mcp_server.py  test_type_conversion.py
user-requirements/: README.md  initial-requirements.md
user-requirements/docs/: next-requirements.md  test.md
